--- a/package.json
+++ b/package.json
@@ -14,38 +14,45 @@
     "web:build": "vite build",
     "web:preview": "vite preview"
   },
-  "keywords": ["mod-manager", "steam-workshop", "translation", "gaming"],
+  "keywords": [
+    "mod-manager",
+    "steam-workshop",
+    "translation",
+    "gaming"
+  ],
   "author": "DMCK96",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "@types/archiver": "^6.0.4",
+    "archiver": "^7.0.1",
     "axios": "^1.6.0",
-    "sqlite3": "^5.1.6",
-    "node-cache": "^5.1.2",
-    "dotenv": "^16.3.1",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "rate-limiter-flexible": "^2.4.2",
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "node-cache": "^5.1.2",
+    "rate-limiter-flexible": "^2.4.2",
+    "sqlite3": "^5.1.6",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "@types/node": "^20.8.0",
-    "@types/express": "^4.17.20",
     "@types/cors": "^2.8.15",
+    "@types/express": "^4.17.20",
+    "@types/jest": "^29.5.6",
+    "@types/node": "^20.8.0",
+    "@types/react": "^18.2.31",
+    "@types/react-dom": "^18.2.14",
     "@types/xml2js": "^0.4.14",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
-    "eslint": "^8.52.0",
-    "tsx": "^4.7.0",
-    "typescript": "^5.2.2",
-    "jest": "^29.7.0",
-    "@types/jest": "^29.5.6",
-    "vite": "^5.0.0",
     "@vitejs/plugin-react": "^4.1.0",
+    "eslint": "^8.52.0",
+    "jest": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@types/react": "^18.2.31",
-    "@types/react-dom": "^18.2.14"
+    "tsx": "^4.7.0",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.0"
   }
 }
