Phase 2: Set up core Electron infrastructure for offline-first architecture
- Create Electron main process (src/main.ts) with secure window management
- Implement IPC preload bridge (src/preload.ts) with context isolation
- Add type definitions for IPC communication (src/types/electron.ts)
- Update package.json with Electron dependencies and build scripts
- Create electron-builder.json for multi-platform distribution
- Add comprehensive documentation (ELECTRON_SETUP.md, DEVELOPMENT.md, ARCHITECTURE.md)
- Add setup verification script (scripts/verify-setup.js)
- All security best practices implemented (nodeIntegration: false, sandbox: true, contextIsolation: true)

This establishes the foundation for transitioning from Express+React to single Electron app.
Next: Migrate services and create offline translation service.

--- a/.gitignore
+++ b/.gitignore
@@ -98,4 +98,13 @@ typings/
 # DynamoDB Local files
 .dynamodb/
 
+# Electron build output
+release/
+dist/
+out/
+
+# Electron builder files
+dist-electron/
+.electron-builder/
+
 package-lock.json
