--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # Environment Configuration
 NODE_ENV=development
-PORT=3000
+
+# Vite Dev Server URL (for Electron development mode)
+VITE_DEV_SERVER_URL=http://localhost:3001
 
 # Steam Workshop API
 STEAM_API_KEY=your_steam_api_key_here
