--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "name": "duckov-mod-manager",
   "version": "1.0.0",
   "description": "A mod manager for Escape from Duckov with Steam Workshop integration and translation support",
-  "main": "dist/index.js",
+  "main": "dist/main.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "npm run web:build && tsc",
-    "start": "node dist/index.js",
+    "dev": "npm run web:dev",
+    "electron:dev": "npm run build:electron && electron .",
+    "electron:watch": "tsx watch --tsconfig tsconfig.electron.json src/main.ts",
+    "build": "npm run web:build && npm run build:electron",
+    "build:electron": "tsc --project tsconfig.electron.json",
+    "start": "electron .",
     "start:full": "npm run build && npm start",
+    "dist": "npm run build && electron-builder",
+    "dist:win": "npm run build && electron-builder --win",
+    "dist:mac": "npm run build && electron-builder --mac",
+    "dist:linux": "npm run build && electron-builder --linux",
     "lint": "eslint src/**/*.ts",
     "test": "jest",
     "web:dev": "vite",
@@ -27,18 +34,13 @@
     "archiver": "^7.0.1",
     "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
-    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "helmet": "^7.1.0",
+    "electron-squirrel-startup": "^1.0.1",
     "node-cache": "^5.1.2",
-    "rate-limiter-flexible": "^2.4.2",
     "sqlite3": "^5.1.6",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.15",
-    "@types/express": "^4.17.20",
     "@types/jest": "^29.5.6",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.31",
@@ -47,6 +49,8 @@
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "@vitejs/plugin-react": "^4.1.0",
+    "electron": "^28.2.0",
+    "electron-builder": "^24.13.3",
     "eslint": "^8.52.0",
     "jest": "^29.7.0",
     "react": "^18.2.0",
