--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/archiver": "^6.0.4",
+    "@xenova/transformers": "^2.17.1",
     "archiver": "^7.0.1",
     "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
@@ -41,6 +42,7 @@
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
+    "@types/electron": "^1.6.10",
     "@types/jest": "^29.5.6",
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.31",
